<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginTop="24dp"
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="0"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal">

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/write_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write">
        </Button>

        <Button
            style="@style/ButtonStyle"
            android:layout_marginTop="12dp"
            android:id="@+id/view_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view">

        </Button>

        <Button
            style="@style/ButtonStyle"
            android:layout_marginTop="12dp"
            android:id="@+id/create_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create">

        </Button>


    </LinearLayout>

    <TextView
        android:id="@+id/date_text"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

    </TextView>

    <TextView
        android:id="@+id/page_text"
        android:layout_marginTop="12dp"
        android:text="@string/page_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff1493"
        android:textSize="16sp"
        android:layout_below="@+id/button_layout"
        android:layout_centerHorizontal="true">

    </TextView>




</RelativeLayout>