<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintVertical_bias="0.931">

    </TextView>

    <EditText
        android:id="@+id/username_edit"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/round_shape"
        android:hint="@string/prompt_email"
        android:gravity="center"
        android:enabled="false"
        android:inputType="text"
        android:maxLength="20"
        android:textSize="24sp"
        android:paddingLeft="12dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:textSize="24sp"
        android:gravity="center"
        android:enabled="false"
        android:background="@drawable/round_shape"
        android:hint="@string/prompt_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLength="8"
        android:paddingLeft="12dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_edit" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:enabled="false"
        android:background="@drawable/round_shape_button"
        android:text="@string/action_sign_in"
        android:textColor="#ffff00"

        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit"
        app:layout_constraintVertical_bias="0.746" />

    <ProgressBar
        android:id="@+id/loading_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mysql_connect"
        android:textSize="32sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/username_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58" />

    <TextView
        android:id="@+id/register_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:enabled="false"
        android:layout_marginBottom="28dp"
        android:text="@string/action_register"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintStart_toStartOf="@+id/password_edit" />
</androidx.constraintlayout.widget.ConstraintLayout>